<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:id="@+id/textView"
         />

     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard"
        android:onClick="openStandardActivity"
         />
     
     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singletop"
        android:onClick="openSingleTopActivity"
         />
     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singletask"
        android:onClick="openSingleTaskActivity"
         />
     
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleintance"
        android:onClick="openSingleIntanceActivity"
         />
</LinearLayout>